2000-07-08  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c (control_activate): Add a "Threaded
	Message List" item to the "View" menu.

	* message-list.c (message_list_toggle_threads): Handler for that.
	(build_flat): New function to build a "flat" message list using
	the tree model.
	(message_list_regenerate): Build tree or flat message list
	depending on the global setting.

	* message-thread.c (get_root_subject): fix a "Re:" parsing bug

2000-07-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Always dump incoming messages to
	Inbox (assuming not filtered to another location).

2000-07-08  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c (control_activate): Move the
	"Expunge" item to the "Action" menu.
	(control_deactivate): Accordingly.

2000-07-08  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (forward_msg): Deal with having multiple selected
	messages.

	* mail-format.c (mail_generate_forward): Removed. (Integrated into
	forward_msg)

2000-07-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-list.c (build_tree): Small fix to stop uid data from
	being set on a message-list tree node when it didn't correspond
	to an actual message.

2000-07-08  Dan Winship  <danw@helixcode.com>

	* message-list.c (get_message_info): Fix Jeff's FIXME: This does
	get called with out-of-range data sometimes, so we do need the
	check. Use e_table_model_row_count to get the actual right answer.

2000-07-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-list.c (get_message_info): This wasn't quite right, it
	will now work but still isn't perfect. See FIXME comment.

2000-07-07  Dan Winship  <danw@helixcode.com>

	* message-thread.c (remove_node): Add another argument "clast"
	pointing to the container before the current one in the list,
	which it can update if that turns out to be the one that it
	removed.
	(group_root_set): Update for remove_node change, and remove both